comp-transform/testsuite/unclear/ABTest/ABTestCompile.golden

comp-transform/testsuite/unclear/ABTest/ABTestTransform.hs:10:16: error:
    Not in scope: type constructor or class B
   |
10 | data A a = A a B
   |                ^
